--- a/src/main/resources/templates/purchasingmanagement2/purchasing_management_add_statement.html
+++ b/src/main/resources/templates/purchasingmanagement2/purchasing_management_add_statement.html
@@ -61,7 +61,7 @@
     <!--查询所有到页面-->
     <script type="text/javascript">
 
-        $(function () {
+        /*$(function () {
             $.ajax({
                 url:"lists1",
                 type:"post",
@@ -69,10 +69,15 @@
                 success:function (list1) {
                     var ss = "";
                     for (var i = 0; i < list1.length; i++) {
-                        ss = "<tr><td><input type=\"checkbox\" style='width: 40px;' class=\"checkboxxia\" onclick=\"xiaOnclick()\" value=" + list1[i].id + "></td><td>"+ list1[i].statementNumber +"</td><td>"+ list1[i].statementName +"</td><td>"
-                            + list1[i].hospitalId +"</td><td>"+ list1[i].contacts +"</td><td>"
-                            + list1[i].phone +"</td><td>"+ list1[i].creatReceiptsPerson +"</td><td>"
-                            + list1[i].createReceiptsTime +"</td><td>"+ list1[i].submissionTime +"</td><td>"
+                        ss = "<tr><td><input type=\"checkbox\" style='width: 40px;' class=\"checkboxxia\" onclick=\"xiaOnclick()\" value=" + list1[i].id + "></td><td>"
+                            + list1[i].statementNumber +"</td><td>"
+                            + list1[i].statementName +"</td><td>"
+                            + list1[i].hospitalId +"</td><td>"
+                            + list1[i].contacts +"</td><td>"
+                            + list1[i].phone +"</td><td>"
+                            + list1[i].creatReceiptsPerson +"</td><td>"
+                            + list1[i].createReceiptsTime +"</td><td>"
+                            + list1[i].submissionTime +"</td><td>"
                             + list1[i].remark +"</td><td>"
                             + (list1[i].statementStateId==1?"未提交":"提交") +"</td><td><button type=\"button\" class=\"btn btn-success btn-sm\" data-toggle=\"modal\" onclick=\"updateSee("+ list1[i].id + ")\" data-target=\"#editModal2\">修改</button></td></tr>"
 
@@ -80,7 +85,7 @@
                     }
                 }
             })
-        })
+        })*/
 
         /*批量删除*/
         function xiaOnclick() {
@@ -198,28 +203,40 @@
     <!--结算单查询-->
     <script type="text/javascript">
 
-        function selectByEntity(){
+        var page;
+        var qian;
+        var hou;
+        $(function () {
+            selectByEntity();
+        })
+
+        function selectByEntity(pageNum){
 
             /*清除页面*/
-            $("#dataList1").empty();
+            $("#tbody").empty();
 
-            var statementNumber = $("#statement_number").val();
-            var statementName = $("#statement_name").val();
+            var statementNumber = $("#statement_number3").val();
+            var statementName = $("#statement_name3").val();
             var hospitalId = $("#hospital_id3").val();
             var statementStateId = $("#statement_state_id3").val();
+
             
             $.ajax({
-                url:"sele1",
+                url:"selList",
                 type:"post",
                 data:{
                     "statementNumber":statementNumber,
                     "statementName":statementName,
                     "hospitalId":hospitalId,
-                    "statementStateId":statementStateId
+                    "statementStateId":statementStateId,
+                    "pageNum":pageNum
                 },
                 dataType:"json",
                 success:function (select) {
+                    console.log(select);
+                    page=select;
                     var ss = "";
+                    select = select.list;
                     for (var i = 0; i < select.length; i++) {
                         /*var html="";
                         if (select[i].returnStateId==1) {
@@ -227,18 +244,38 @@
                         }else if(select[i].returnStateId==2){
                             html="提交";
                         }*/
-                        ss = "<tr><td><input type=\"checkbox\" style='width: 40px;' class=\"checkboxxia\" onclick=\"xiaOnclick()\" value=" + select[i].id + "></td><td>"+ select[i].statementNumber +"</td><td>"+ select[i].statementName +"</td><td>"
-                            + select[i].hospitalId +"</td><td>"+ select[i].contacts +"</td><td>"
-                            + select[i].phone +"</td><td>"+ select[i].creatReceiptsPerson +"</td><td>"
-                            + select[i].createReceiptsTime +"</td><td>"+ select[i].submissionTime +"</td><td>"
+                        ss = "<tr><td><input type=\"checkbox\" style='width: 40px;' class=\"checkboxxia\" onclick=\"xiaOnclick()\" value=" + select[i].id + "></td><td>"
+                            + select[i].statementNumber +"</td><td>"
+                            + select[i].statementName +"</td><td>"
+                            + select[i].hospitalId +"</td><td>"
+                            + select[i].contacts +"</td><td>"
+                            + select[i].phone +"</td><td>"
+                            + select[i].creatReceiptsPerson +"</td><td>"
+                            + select[i].createReceiptsTime +"</td><td>"
+                            + select[i].submissionTime +"</td><td>"
                             + select[i].remark +"</td><td>"
-                            + (select[i].statementStateId==1?"未提交":"提交") +"</td><td><button type=\"button\" class=\"btn btn-success btn-sm\" data-toggle=\"modal\" onclick=\"updateSee("+ select[i].id + ")\" data-target=\"#editModal2\">修改</button></td></tr>"
+                            + (select[i].statementStateId==1?"未结算":"结算") +"</td><td><button type=\"button\" class=\"btn btn-success btn-sm\" data-toggle=\"modal\" onclick=\"updateSee("+ select[i].id + ")\" data-target=\"#editModal2\">修改</button></td></tr>"
 
-                        $("#dataList1").append(ss);
+                        $("#tbody").append(ss);
+                        qian=list1.pageNum==1?1:list1.pageNum-1;
+                        hou=list1.pageNum==list1.pages?list1.pages:list1.pageNum+1;
                     }
                 }
             })
         }
+    </script>
+
+
+    <!--导出到excel-->
+    <script type="text/javascript">
+
+        function exportAlls() {
+            var formData = $("#fuzzyFormId").serialize()
+            if (confirm("确定导出文件吗？")){
+                location.href="exportAlls?"+formData;
+            }
+        }
+
     </script>
 
 
@@ -248,6 +285,7 @@
 <!-- .box-body -->
 <toaster-container toaster-options="{'time-out': 1000,'position-class':'toast-top-center'}"></toaster-container>
 
+<form action="" id="fuzzyFormId" method="post">
 <div class="panel panel-info">
     <!-- Default panel contents -->
     <div class="panel-heading">添加结算单</div>
@@ -258,13 +296,13 @@
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">结算单编号：</span>
             </td>
             <td >
-                <input class="form-control" id="return_order_number3" name="returnOrderNumber">
+                <input class="form-control" id="statement_number3" name="statementNumber">
             </td>
             <td style="text-align: right">
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">结算单名称：</span>
             </td>
             <td >
-                <input class="form-control" id="return_order_name3" name="returnOrderName">
+                <input class="form-control" id="statement_name3" name="statementName">
             </td>
         </tr>
 
@@ -276,23 +314,23 @@
                 <input class="form-control" id="hospital_id3" name="hospitalId">
             </td>
             <td style="text-align: right">
-                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">退货单状态：</span>
+                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">结算单状态：</span>
             </td>
             <td>
                 <select id="statement_state_id3" name="statementStateId" style="width: 50%;height: 20%">
-                    <option value="1">未提交</option>
-                    <option value="2">提交</option>
+                    <option value="0">请选择</option>
+                    <option value="1">未结算</option>
+                    <option value="2">结算</option>
                 </select>
             </td>
         </tr>
     </table>
     <div style="text-align: center;padding-top: 10px">
-        <button class="btn btn-success btn-sm" onclick="selectByEntity()">查询退货单</button>
-       <!--<button type="button" class="btn btn-success btn-sm"  data-toggle="modal"
-                data-target="#editModal">导出
-        </button>-->
+        <button type="button" class="btn btn-success btn-sm" onclick="selectByEntity()">查询结算单</button>
+       <button type="button" class="btn btn-success btn-sm"  onclick="exportAlls()">导出</button>
     </div>
 </div>
+</form>
 <div class="box-body">
     <!-- 数据表格 -->
     <div class="table-box">
@@ -341,7 +379,7 @@
                 <th class="sorting">修改</th>
             </tr>
             </thead>
-            <!--<tbody class="context">
+            <tbody class="context" id="tbody">
             <tr>
                 <td>00008</td>
                 <td>0.9%氯化钠</td>
@@ -354,10 +392,10 @@
                 <td>3</td>
                 <td>3</td>
                 <td>
-                    <button type="button" class="btn btn-success btn-sm" data-toggle="modal" onclick="updateSee("+ list[i].id +")"data-target="#editModal2">修改</button>
+<!--                    <button type="button" class="btn btn-success btn-sm" data-toggle="modal" onclick="updateSee("+ list[i].id +")"data-target="#editModal2">修改</button>-->
                 </td>
             </tr>
-            </tbody>-->
+            </tbody>
         </table>
         <!--数据列表/-->
         <!--分页工具条展示-->
@@ -365,18 +403,18 @@
             <nav aria-label="Page navigation">
                 <ul class="pagination">
                     <li>
-                        <a href="#" aria-label="Previous">
+                        <a href="#" aria-label="Previous" onclick="selectByEntity(qian)">
                             <span aria-hidden="true">&laquo;</span>
                         </a>
                     </li>
-                    <li><a href="#">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">4</a></li>
-                    <li><a href="#">5</a></li>
+                    <li><a href="#" onclick="selectByEntity(1)">1</a></li>
+                    <li><a href="#" onclick="selectByEntity(2)">2</a></li>
+                    <li><a href="#" onclick="selectByEntity(3)">3</a></li>
+                    <li><a href="#" onclick="selectByEntity(4)">4</a></li>
+                    <li><a href="#" onclick="selectByEntity(5)">5</a></li>
                     <li>
-                        <a href="#" aria-label="Next">
-                            <span aria-hidden="true">&laquo;</span>
+                        <a href="#" aria-label="Next" onclick="selectByEntity(hou)">
+                            <span aria-hidden="true">&raquo;</span>
                         </a>
                     </li>
                 </ul>
@@ -431,8 +469,9 @@
                         <td>结算单状态:</td>
                         <td>
                             <select id="statement_state_id" name="statementStateId" style="width: 50%;height: 20%">
-                                <option value="1">未提交</option>
-                                <option value="2">提交</option>
+                                <option value="0">请选择</option>
+                                <option value="1">未结算</option>
+                                <option value="2">结算</option>
                             </select>
                         </td>
                     </tr>
@@ -494,8 +533,9 @@
                         <td>退货单状态:</td>
                         <td>
                             <select id="statement_state_id2" name="statementStateId" style="width: 50%;height: 20%">
-                                <option value="1">未提交</option>
-                                <option value="2">提交</option>
+                                <option value="0">请选择</option>
+                                <option value="1">未结算</option>
+                                <option value="2">结算</option>
                             </select>
                         </td>
                     </tr>
